src/specific_models/bot-iot/attack_identification/logfile.2020-07-12-18_41_41.log
  File "autoencoder.py", line 493
    if ((pred >= threshold) and (label = 0)):
                                       ^
SyntaxError: invalid syntax
